<?xml version="1.0"?>
<package format="2">
  <name>mesh_sim</name>
  <version>0.1.0</version>
  <description>The mesh_sim package</description>

  <maintainer email="gustavo@todo.todo">gustavo</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp std_msgs</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
